Fixing backspacing issues

--- a/src/angular-secure-password.css
+++ b/src/angular-secure-password.css
@@ -50,6 +50,10 @@
   /*word-spacing: -8px;*/
 }
 
+.first-symbol {
+  word-spacing: -10px;
+}
+
 /* Based on http://codepen.io/ArtemGordinsky/pen/GnLBq */
 .blinking-cursor {
   font-size: 20px;
